syntax = "proto3";

option go_package="GoldenCity/gin;GoldenCitygin";

import "base.proto";

enum TProtoGoldenCityBetType{
    NORMAL = 0;
    FREE = 1;
    BUYFREE = 2;
}

message TProtoGoldenCityBetReq
{
    string      token       = 1;  //
    TProtoGoldenCityBetType     bet         = 2;  //投注总额 = betsize * betmultiple * 20
    int32       buytype     = 3;  //买入类型 1：normal   2：buyfree
    int64       betsize     = 4;  //投注大小   
    int32       betmultiple = 5;  //投注倍数
    int32       betid       = 6;  //下注ID
}

message TProtoGoldenCityBetRsp
{
    int64                           balance   = 1; // 中奖后的钱
    repeated TResult                result    = 2;
    int64                           bet       = 3;  //投注总额
    int32                           freetimes = 4;  //单次旋转后，触发的免费次数
    int64                           wintotal  = 5;  //一次旋转到不能再消除后，赢得总金额
    string                          orderid   = 6;  //订单ID
}
